package handler

import (
	"context"
	"user_service/internal/config"
	"user_service/pkg/logger"
	"user_service/proto/proto_gen"
	//"google.golang.org/grpc/codes"
	//"google.golang.org/grpc/status"
)

// UserServiceHandler 用户服务处理器
type UserServiceHandler struct {
	proto_gen.UnimplementedUserServiceServer
	config *config.Config
	logger logger.Logger
}

// NewUserServiceHandler 创建用户服务处理器
func NewUserServiceHandler(cfg *config.Config, log logger.Logger) *UserServiceHandler {
	return &UserServiceHandler{
		config: cfg,
		logger: log,
	}
}

// PhoneLogin 手机号登录
func (h *UserServiceHandler) PhoneLogin(ctx context.Context, req *proto_gen.PhoneLoginRequest) (*proto_gen.LoginResponse, error) {
	h.logger.Info("PhoneLogin called", "phone", req.Phone)

	// TODO: 实现手机号登录逻辑
	return &proto_gen.LoginResponse{
		StatusCode: 0,
		StatusMsg:  "手机号登录功能开发中",
		//UserId:     0,
		Token: "",
	}, nil
}

// CodeLogin 验证码登录
func (h *UserServiceHandler) CodeLogin(ctx context.Context, req *proto_gen.CodeLoginRequest) (*proto_gen.LoginResponse, error) {
	h.logger.Info("CodeLogin called", "phone", req.Phone)

	// TODO: 实现验证码登录逻辑
	return &proto_gen.LoginResponse{
		StatusCode: 0,
		StatusMsg:  "验证码登录功能开发中",
		//UserId:     0,
		Token: "",
	}, nil
}

// SendSmsCode 发送短信验证码
func (h *UserServiceHandler) SendSmsCode(ctx context.Context, req *proto_gen.SendSmsRequest) (*proto_gen.SendSmsResponse, error) {
	h.logger.Info("SendSmsCode called", "phone", req.Phone)

	// TODO: 实现发送短信验证码逻辑
	return &proto_gen.SendSmsResponse{
		StatusCode: 0,
		StatusMsg:  "发送短信验证码功能开发中",
	}, nil
}

// VerifyToken 验证Token
func (h *UserServiceHandler) VerifyToken(ctx context.Context, req *proto_gen.VerifyTokenRequest) (*proto_gen.VerifyTokenResponse, error) {
	h.logger.Info("VerifyToken called", "token", req.Token)

	// TODO: 实现Token验证逻辑
	return &proto_gen.VerifyTokenResponse{
		StatusCode: 0,
		StatusMsg:  "Token验证功能开发中",
		UserId:     0,
	}, nil
}

// RefreshToken 刷新Token
func (h *UserServiceHandler) RefreshToken(ctx context.Context, req *proto_gen.RefreshTokenRequest) (*proto_gen.RefreshTokenResponse, error) {
	h.logger.Info("RefreshToken called", "refresh_token", req.RefreshToken)

	// TODO: 实现Token刷新逻辑
	return &proto_gen.RefreshTokenResponse{
		StatusCode: 0,
		StatusMsg:  "Token刷新功能开发中",
		Token:      "",
	}, nil
}

// GetUserInfo 获取用户信息
func (h *UserServiceHandler) GetUserInfo(ctx context.Context, req *proto_gen.GetUserInfoRequest) (*proto_gen.UserResponse, error) {
	h.logger.Info("GetUserInfo called", "user_id", req.UserId)

	// TODO: 实现获取用户信息逻辑
	return &proto_gen.UserResponse{
		StatusCode: 0,
		StatusMsg:  "获取用户信息功能开发中",
		User:       nil,
	}, nil
}

// GetUserInfos 批量获取用户信息
func (h *UserServiceHandler) GetUserInfos(ctx context.Context, req *proto_gen.GetUserInfosRequest) (*proto_gen.GetUserInfosResponse, error) {
	h.logger.Info("GetUserInfos called", "user_ids", req.UserIds)

	// TODO: 实现批量获取用户信息逻辑
	return &proto_gen.GetUserInfosResponse{
		StatusCode: 0,
		StatusMsg:  "批量获取用户信息功能开发中",
		Users:      nil,
	}, nil
}

// UpdateUserInfo 更新用户信息
func (h *UserServiceHandler) UpdateUserInfo(ctx context.Context, req *proto_gen.UpdateUserRequest) (*proto_gen.UpdateUserResponse, error) {
	//h.logger.Info("UpdateUserInfo called", "user_id", req.UserId)

	// TODO: 实现更新用户信息逻辑
	return &proto_gen.UpdateUserResponse{
		StatusCode: 0,
		StatusMsg:  "更新用户信息功能开发中",
	}, nil
}

// GetUserExistInformation 检查用户是否存在
func (h *UserServiceHandler) GetUserExistInformation(ctx context.Context, req *proto_gen.UserExistRequest) (*proto_gen.UserExistResponse, error) {
	h.logger.Info("GetUserExistInformation called", "user_id", req.UserId)

	// TODO: 实现检查用户是否存在逻辑
	return &proto_gen.UserExistResponse{
		StatusCode: 0,
		StatusMsg:  "检查用户是否存在功能开发中",
		//Exist:      false,
	}, nil
}
